<resources>
    <string name="app_name">广职院校园一卡通</string>
    <string name="username">用户名:</string>
    <string name="password">密  码:</string>
    <string name="password_again">确认密码</string>
    <string name="btn_login">登录</string>
    <string name="btn_register">注册</string>
    <string name="btn_registerActivity">注册账号</string>
    <string name="remanberPassword">记住密码</string>
    <string name="registerUser">还没有账号？现在注册</string>


    <string name="text_info">账号查询</string>
    <string name="text_lock">卡片挂失</string>
    <string name="text_unlock">卡片解挂</string>
    <string name="text_recharge">卡片充值</string>
    <string name="text_record">消费记录</string>
    <string name="text_updateInfo">信息修改</string>
    <string name="text_updatePsw">密码修改</string>
    <string name="text_school">校园中心</string>
    <string name="text_seting">设置中心</string>




</resources>
